# docs/swagger.json
@@ -398,7 +398,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LoginReq"
+                            "$ref": "#/definitions/dto.KLoginReq"
                         }
                     }
                 ],
@@ -428,7 +428,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RegisterReq"
+                            "$ref": "#/definitions/dto.KRegisterReq"
                         }
                     }
                 ],
@@ -463,7 +463,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UpdateUserReq"
+                            "$ref": "#/definitions/dto.KUpdateUserReq"
                         }
                     }
                 ],
@@ -493,7 +493,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LoginReq"
+                            "$ref": "#/definitions/dto.KLoginReq"
                         }
                     }
                 ],
@@ -523,7 +523,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RegisterReq"
+                            "$ref": "#/definitions/dto.KRegisterReq"
                         }
                     }
                 ],
@@ -558,7 +558,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UpdateUserReq"
+                            "$ref": "#/definitions/dto.KUpdateUserReq"
                         }
                     }
                 ],
@@ -853,6 +853,70 @@
             "properties": {
                 "id": {
                     "description": "ID of the address\nexample: \"12345\"",
+                    "type": "string"
+                }
+            }
+        },
+        "dto.KLoginReq": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.KRegisterReq": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.KUpdateUserReq": {
+            "type": "object",
+            "required": [
+                "email",
+                "new_password",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "new_password": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phone_number": {
                     "type": "string"
                 }
             }
